--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: PT Measurement Limited
-description: Fiscal flow metering consultancy 
+description: Fiscal flow measurement consultancy 
